Bug 465452 - better handling of format hints for downloadable fonts. r=dbaron.